--- a/public/index.html
+++ b/public/index.html
@@ -594,25 +594,164 @@
 				</section>
 				<!-- end sAbout-->
 				<!-- start sAdvantages-->
-				<section class="sAdvantages section" id="sAdvantages">
+				<div class="sAdvantages section" id="sAdvantages">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>sAdvantages</h2>
+						<div class="row">
+									<div class="col-sm-6 col-lg-4">
+										<div class="sAdvantages__item"><img src="img/svg/sAdvantages-1.svg" alt=""/>
+											<h4>6&nbsp;цехов <br> производства</h4>
+											<p>Быстрое изготовление и&nbsp;доставка из&nbsp;ближайшего цеха</p>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4">
+										<div class="sAdvantages__item"><img src="img/svg/sAdvantages-2.svg" alt=""/>
+											<h4>Соблюдаем СП, <br> СНИП и&nbsp;ГОСТ</h4>
+											<p>Имеем все необходимые сертификаты качества</p>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4">
+										<div class="sAdvantages__item"><img src="img/svg/sAdvantages-3.svg" alt=""/>
+											<h4>Предоплата <br> всего&nbsp;50%</h4>
+											<p>50% за&nbsp;материалы до&nbsp;начала работ, 50%&nbsp;&mdash; по&nbsp;завершению</p>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4">
+										<div class="sAdvantages__item"><img src="img/svg/sAdvantages-4.svg" alt=""/>
+											<h4>Бесплатный замер, <br> смета и&nbsp;3D-макет</h4>
+											<p>Узнайте заранее внешний вид и&nbsp;цену будущего навеса</p>
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-4">
+										<div class="sAdvantages__item"><img src="img/svg/sAdvantages-5.svg" alt=""/>
+											<h4>Гарантия на <br> навес 1&nbsp;год</h4>
+											<p>Починим или заменим за&nbsp;свой счет в&nbsp;случае брака</p>
+										</div>
+									</div>
 						</div>
-						<div class="row"></div>
 					</div>
-				</section>
+				</div>
 				<!-- end sAdvantages-->
-				<!-- start sQuestions-->
-				<section class="sQuestions section" id="sQuestions">
+				<!-- start sAccordion-->
+				<section class="sAccordion section" id="sAccordion">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sQuestions</h2>
+							<h2>Часто задаваемые вопросы</h2>
 						</div>
-						<div class="row"></div>
+						<div class="dd-group dd-group-js">
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Как понять сколько будет стоить мой навес?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Сколько стоит замер на&nbsp;моей территории?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Как быстро сможете сделать?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Не&nbsp;сломается? Есть&nbsp;ли гарантия на&nbsp;изделие и&nbsp;работы?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Есть&nbsp;ли у&nbsp;вас скидки?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Нужна&nbsp;ли предоплата? как проходитпроцесс оплаты?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Заключаете&nbsp;ли вы&nbsp;договор на&nbsp;услуги?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Возможно&nbsp;ли купить в&nbsp;рассрочку?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Какую краску вы&nbsp;используете для покраски навеса?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+							<div class="accordion-item">
+								<div class="accordion-item__head dd-head-js">
+									<h4>Как вы&nbsp;монтрируете навес в&nbsp;землю?</h4>
+									<svg class="icon icon-chevron-right ">
+										<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+									</svg>
+								</div>
+								<div class="accordion-item__content dd-content-js">
+									<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и&nbsp;3D-макет навеса мы&nbsp;делаем бесплатно.</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
-				<!-- end sQuestions-->
+				<!-- end sAccordion-->
 				<!-- start sCertificates-->
 				<section class="sCertificates section" id="sCertificates">
 					<div class="container">
