--- a/public/index.html
+++ b/public/index.html
@@ -482,7 +482,210 @@
 						<h4>Отзывы</h4>
 						<h2>Что говорят о&nbsp;наших навесах клиенты</h2>
 					</div>
-					<div class="row"></div>
+					<div class="sReviews__slider-wrapper">
+						<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+							<svg class="icon icon-arrow-left ">
+								<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+							</svg>
+						</div>
+						<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+							<svg class="icon icon-arrow-right ">
+								<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+							</svg>
+						</div>
+						<div class="sReviews__slider sReviews__slider--js swiper">
+							<div class="swiper-wrapper">
+								<div class="sReviews__slide swiper-slide">
+										<div class="reviewItem">
+											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
+												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
+												</div>
+												<h4>&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;</h4>
+												<div class="reviewItem__subtitle">Аудио-отзыв
+												</div>
+												<audio controls="" src=""></audio>
+												<a class="reviewItem__btn" href="#">Читать отзыв
+												</a>
+											</div>
+											<div class="reviewItem__footer row">
+												<div class="col-auto">
+													<div class="reviewItem__img-wrap bg-wrap">
+														<svg class="icon icon-person ">
+															<use xlink:href="img/svg/sprite.svg#person"></use>
+														</svg>
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviewItem__subtitle">Клиент
+													</div>
+													<p>Игорь</p>
+													<div class="small">МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</div>
+												</div>
+											</div>
+										</div>
+								</div>
+								<div class="sReviews__slide swiper-slide">
+										<div class="reviewItem">
+											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
+												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
+												</div>
+												<h4>&laquo;Все договоренности соблюдаются&raquo;</h4>
+												<div class="reviewItem__subtitle">Аудио-отзыв
+												</div>
+												<audio controls="" src=""></audio>
+												<a class="reviewItem__btn" href="#">Читать отзыв
+												</a>
+											</div>
+											<div class="reviewItem__footer row">
+												<div class="col-auto">
+													<div class="reviewItem__img-wrap bg-wrap">
+														<svg class="icon icon-person ">
+															<use xlink:href="img/svg/sprite.svg#person"></use>
+														</svg>
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviewItem__subtitle">Клиент
+													</div>
+													<p>Вадим Львович</p>
+													<div class="small">МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</div>
+												</div>
+											</div>
+										</div>
+								</div>
+								<div class="sReviews__slide swiper-slide">
+										<div class="reviewItem">
+											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
+												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
+												</div>
+												<h4>&laquo;Аккуратно все сделали и&nbsp;уложились в&nbsp;сроки&raquo;</h4>
+												<div class="reviewItem__subtitle">Аудио-отзыв
+												</div>
+												<audio controls="" src=""></audio>
+												<a class="reviewItem__btn" href="#">Читать отзыв
+												</a>
+											</div>
+											<div class="reviewItem__footer row">
+												<div class="col-auto">
+													<div class="reviewItem__img-wrap bg-wrap">
+														<svg class="icon icon-person ">
+															<use xlink:href="img/svg/sprite.svg#person"></use>
+														</svg>
+														<!-- picture-->
+														<picture class="picture-bg"> 
+															<source type="image/avif" srcset="img/@2x/avif/person-1.avif"/>
+															<source type="image/webp" srcset="img/@2x/webp/person-1.webp"/><img class="object-fit-js" src="img/@2x/person-1.jpg" alt="" loading="lazy"/>
+														</picture>
+														<!-- /picture-->
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviewItem__subtitle">Клиент
+													</div>
+													<p>Григорий</p>
+													<div class="small">МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</div>
+												</div>
+											</div>
+										</div>
+								</div>
+								<div class="sReviews__slide swiper-slide">
+										<div class="reviewItem">
+											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
+												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
+												</div>
+												<h4>&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;</h4>
+												<div class="reviewItem__subtitle">Аудио-отзыв
+												</div>
+												<audio controls="" src=""></audio>
+												<a class="reviewItem__btn" href="#">Читать отзыв
+												</a>
+											</div>
+											<div class="reviewItem__footer row">
+												<div class="col-auto">
+													<div class="reviewItem__img-wrap bg-wrap">
+														<svg class="icon icon-person ">
+															<use xlink:href="img/svg/sprite.svg#person"></use>
+														</svg>
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviewItem__subtitle">Клиент
+													</div>
+													<p>Игорь</p>
+													<div class="small">МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</div>
+												</div>
+											</div>
+										</div>
+								</div>
+								<div class="sReviews__slide swiper-slide">
+										<div class="reviewItem">
+											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
+												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
+												</div>
+												<h4>&laquo;Все договоренности соблюдаются&raquo;</h4>
+												<div class="reviewItem__subtitle">Аудио-отзыв
+												</div>
+												<audio controls="" src=""></audio>
+												<a class="reviewItem__btn" href="#">Читать отзыв
+												</a>
+											</div>
+											<div class="reviewItem__footer row">
+												<div class="col-auto">
+													<div class="reviewItem__img-wrap bg-wrap">
+														<svg class="icon icon-person ">
+															<use xlink:href="img/svg/sprite.svg#person"></use>
+														</svg>
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviewItem__subtitle">Клиент
+													</div>
+													<p>Вадим Львович</p>
+													<div class="small">МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</div>
+												</div>
+											</div>
+										</div>
+								</div>
+								<div class="sReviews__slide swiper-slide">
+										<div class="reviewItem">
+											<div class="reviewItem__body"><img src="img/svg/reviewItem-bg.svg" alt=""/>
+												<div class="reviewItem__subtitle">Цитата из&nbsp;отзыва
+												</div>
+												<h4>&laquo;Аккуратно все сделали и&nbsp;уложились в&nbsp;сроки&raquo;</h4>
+												<div class="reviewItem__subtitle">Аудио-отзыв
+												</div>
+												<audio controls="" src=""></audio>
+												<a class="reviewItem__btn" href="#">Читать отзыв
+												</a>
+											</div>
+											<div class="reviewItem__footer row">
+												<div class="col-auto">
+													<div class="reviewItem__img-wrap bg-wrap">
+														<svg class="icon icon-person ">
+															<use xlink:href="img/svg/sprite.svg#person"></use>
+														</svg>
+														<!-- picture-->
+														<picture class="picture-bg"> 
+															<source type="image/avif" srcset="img/@2x/avif/person-1.avif"/>
+															<source type="image/webp" srcset="img/@2x/webp/person-1.webp"/><img class="object-fit-js" src="img/@2x/person-1.jpg" alt="" loading="lazy"/>
+														</picture>
+														<!-- /picture-->
+													</div>
+												</div>
+												<div class="col">
+													<div class="reviewItem__subtitle">Клиент
+													</div>
+													<p>Григорий</p>
+													<div class="small">МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</div>
+												</div>
+											</div>
+										</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a class="sReviews__btn" href="#">Смотреть все 214 отзывов
+					</a>
 				</div>
 			</section>
 			<!-- end sReviews-->
