--- a/public/index.html
+++ b/public/index.html
@@ -696,7 +696,62 @@
 						<h4>Этапы работы</h4>
 						<h2>Как заказать и&nbsp;получить навес</h2>
 					</div>
-					<div class="row"></div>
+					<div class="row">
+								<div class="sStages__col col-sm-6 col-lg-4">
+									<div class="sStages__item"><span>1</span>
+										<h4>Вызов замерщика</h4><span>Бесплатно</span>
+										<p>Приедет в&nbsp;будни или выходные. Опишите пожелания, мы&nbsp;все учтем.</p>
+										<svg class="icon icon-sStages-arrow ">
+											<use xlink:href="img/svg/sprite.svg#sStages-arrow"></use>
+										</svg>
+									</div>
+								</div>
+								<div class="sStages__col col-sm-6 col-lg-4">
+									<div class="sStages__item"><span>2</span>
+										<h4>Смета и&nbsp;3D-макет</h4><span>Бесплатно</span>
+										<p>Рассчитаем цену материалов и&nbsp;работы и&nbsp;создадим наглядную визуализацию</p>
+										<svg class="icon icon-sStages-arrow ">
+											<use xlink:href="img/svg/sprite.svg#sStages-arrow"></use>
+										</svg>
+									</div>
+								</div>
+								<div class="sStages__col col-sm-6 col-lg-4">
+									<div class="sStages__item"><span>3</span>
+										<h4>Заключение договора</h4><span>Предоплата на&nbsp;материалы</span>
+										<p>У&nbsp;нас в&nbsp;офисе, через курьера или в&nbsp;электронном виде.</p>
+										<svg class="icon icon-sStages-arrow ">
+											<use xlink:href="img/svg/sprite.svg#sStages-arrow"></use>
+										</svg>
+									</div>
+								</div>
+								<div class="sStages__col col-sm-6 col-lg-4">
+									<div class="sStages__item"><span>4</span>
+										<h4>Изготовление навеса</h4><span>В&nbsp;среднем 14&minus;30 дней</span>
+										<p>На&nbsp;собственном производстве, расположенном в&nbsp;МО.</p>
+										<svg class="icon icon-sStages-arrow ">
+											<use xlink:href="img/svg/sprite.svg#sStages-arrow"></use>
+										</svg>
+									</div>
+								</div>
+								<div class="sStages__col col-sm-6 col-lg-4">
+									<div class="sStages__item"><span>5</span>
+										<h4>Доставка и&nbsp;установка</h4><span>В&nbsp;среднем 1&minus;2 дня</span>
+										<p>Доставка в&nbsp;выбранный вами день. Установка&nbsp;&mdash; в&nbsp;день доставки.</p>
+										<svg class="icon icon-sStages-arrow ">
+											<use xlink:href="img/svg/sprite.svg#sStages-arrow"></use>
+										</svg>
+									</div>
+								</div>
+								<div class="sStages__col col-sm-6 col-lg-4">
+									<div class="sStages__item"><span>6</span>
+										<h4>Подписание акта</h4><span>Финальная оплата</span>
+										<p>После установки навеса мы&nbsp;вывезем за&nbsp;собой весь строительный мусор.</p>
+										<svg class="icon icon-sStages-arrow ">
+											<use xlink:href="img/svg/sprite.svg#sStages-arrow"></use>
+										</svg>
+									</div>
+								</div>
+					</div>
 				</div>
 			</section>
 			<!-- end sStages-->
