--- a/public/index.html
+++ b/public/index.html
@@ -44,23 +44,72 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
-			<!-- start topLine-->
-			<section class="topLine section" id="topLine">
-				<div class="container">
-					<div class="section-title text-center">
-						<h2>topLine</h2>
-					</div>
-					<div class="row"></div>
-				</div>
-			</section>
-			<!-- end topLine-->
 			<!-- start headerBlock-->
-			<div class="headerBlock section" id="headerBlock">
+			<div class="headerBlock section bg-wrap" id="headerBlock">
+				<!-- picture-->
+				<picture class="picture-bg"> 
+					<source type="image/avif" srcset="img/@2x/avif/headerBlock-bg.avif"/>
+					<source type="image/webp" srcset="img/@2x/webp/headerBlock-bg.webp"/><img class="object-fit-js" src="img/@2x/headerBlock-bg.png" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
 				<div class="container">
-					<div class="section-title text-center">
-						<h1>Изготовление и&nbsp;установка навесов под ключ в&nbsp;Москве и&nbsp;МО</h1>
+					<div class="row">
+						<div class="headerBlock__col col">
+							<div class="section-title">
+								<h1>Изготовление и&nbsp;установка навесов под ключ в&nbsp;Москве и&nbsp;МО</h1>
+							</div>
+							<div class="headerBlock__time d-none d-lg-flex"><span>Изготовление 14&ndash;30 дней</span><span>&bull;</span><span>Установка 1&ndash;2 дня</span>
+							</div>
+							<a class="headerBlock__btn" href="#">Вызвать замерщика
+							</a>
+							<p>Выезжаем в&nbsp;удобный для вас день и&nbsp;время</p>
+						</div>
+						<div class="col-lg-auto">
+							<div class="form-wrap">
+								<form>
+									<h4>Расчет цены за&nbsp;5&nbsp;минут</h4>
+									<div class="form-wrap__subtitle">Заполните форму&nbsp;&mdash; мы&nbsp;сразу перезвоним
+									</div>
+									<p>Укажите габариты навеса </p>
+									<div class="row">
+										<div class="col-6">
+											<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ширина"/>
+											</div>
+											<!-- +e.input-wrap-->
+										</div>
+										<div class="col-6">
+											<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Длина"/>
+											</div>
+											<!-- +e.input-wrap-->
+										</div>
+										<div class="col-12">
+											<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона +7 ___ ___ - __ - __"/>
+											</div>
+											<!-- +e.input-wrap-->
+										</div>
+										<div class="col-12">
+											<a class="form-wrap__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<ul>
+										<li>
+											<svg class="icon icon-positive ">
+												<use xlink:href="img/svg/sprite.svg#positive"></use>
+											</svg><span>Коммерческое предложение <br> с&nbsp;перечнем работ и&nbsp;материалов</span>
+										</li>
+										<li>
+											<svg class="icon icon-positive ">
+												<use xlink:href="img/svg/sprite.svg#positive"></use>
+											</svg><span>Бесплатный выезд инженера на&nbsp;ваш участок</span>
+										</li>
+									</ul>
+									<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a href="#">персональных&nbsp;данных</a>
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
-					<div class="row"></div>
 				</div>
 			</div>
 			<!-- end headerBlock-->
