--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 							<p>Выезжаем в&nbsp;удобный для вас день и&nbsp;время</p>
 						</div>
 						<div class="col-lg-auto">
-							<div class="form-wrap">
+							<div class="form-wrap blurred-block">
 								<form>
 									<h4>Расчет цены за&nbsp;5&nbsp;минут</h4>
 									<div class="form-wrap__subtitle">Заполните форму&nbsp;&mdash; мы&nbsp;сразу перезвоним
@@ -107,6 +107,40 @@
 									<div class="form-wrap__agreement">Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a href="#">персональных&nbsp;данных</a>
 									</div>
 								</form>
+							</div>
+						</div>
+					</div>
+					<div class="headerBlock__cards">
+						<div class="row">
+							<div class="col-lg-4">
+								<div class="headerBlock__item blurred-block">
+									<div class="headerBlock__icon-wrap">
+										<svg class="icon icon-headerBlock-1 ">
+											<use xlink:href="img/svg/sprite.svg#headerBlock-1"></use>
+										</svg>
+									</div>
+									<p>Выдерживают нагрузку 300&nbsp;кг/м2&nbsp;&mdash; это почти вдвое прочнее рекомендуемых нормативов в&nbsp;Москве и&nbsp;МО (180&nbsp;кг/м2)</p>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="headerBlock__item bg-white">
+									<div class="headerBlock__icon-wrap">
+										<svg class="icon icon-headerBlock-2 ">
+											<use xlink:href="img/svg/sprite.svg#headerBlock-2"></use>
+										</svg>
+									</div>
+									<p>Официальный договор, гарантия 12&nbsp;месяцев, оплата наличными, картой или&nbsp;на&nbsp;счет</p>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="headerBlock__item blurred-block">
+									<div class="headerBlock__icon-wrap">
+										<svg class="icon icon-headerBlock-3 ">
+											<use xlink:href="img/svg/sprite.svg#headerBlock-3"></use>
+										</svg>
+									</div>
+									<p>Финальная уборка после работы&nbsp;&mdash; не&nbsp;оставим после себя мусор</p>
+								</div>
 							</div>
 						</div>
 					</div>
