edit headerBlock & sReviews

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
 		<link href="libs/swiper/swiper.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
+		<link href="libs/plyr/plyr.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
 	<body class="main-page">
@@ -123,7 +124,7 @@
 								</div>
 							</div>
 							<div class="col-lg-4">
-								<div class="headerBlock__item bg-white">
+								<div class="headerBlock__item white-bg">
 									<div class="headerBlock__icon-wrap">
 										<svg class="icon icon-headerBlock-2 ">
 											<use xlink:href="img/svg/sprite.svg#headerBlock-2"></use>
@@ -586,7 +587,9 @@
 												<h4>&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;</h4>
 												<div class="reviewItem__subtitle">Аудио-отзыв
 												</div>
-												<audio controls="" src=""></audio>
+												<audio class="js-player" controls="">
+													<source src="audio/sample.mp3" type="audio/mp3"/>
+												</audio>
 												<a class="reviewItem__btn" href="#">Читать отзыв
 												</a>
 											</div>
@@ -615,7 +618,9 @@
 												<h4>&laquo;Все договоренности соблюдаются&raquo;</h4>
 												<div class="reviewItem__subtitle">Аудио-отзыв
 												</div>
-												<audio controls="" src=""></audio>
+												<audio class="js-player" controls="">
+													<source src="audio/sample.mp3" type="audio/mp3"/>
+												</audio>
 												<a class="reviewItem__btn" href="#">Читать отзыв
 												</a>
 											</div>
@@ -644,7 +649,9 @@
 												<h4>&laquo;Аккуратно все сделали и&nbsp;уложились в&nbsp;сроки&raquo;</h4>
 												<div class="reviewItem__subtitle">Аудио-отзыв
 												</div>
-												<audio controls="" src=""></audio>
+												<audio class="js-player" controls="">
+													<source src="audio/sample.mp3" type="audio/mp3"/>
+												</audio>
 												<a class="reviewItem__btn" href="#">Читать отзыв
 												</a>
 											</div>
@@ -679,7 +686,9 @@
 												<h4>&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;</h4>
 												<div class="reviewItem__subtitle">Аудио-отзыв
 												</div>
-												<audio controls="" src=""></audio>
+												<audio class="js-player" controls="">
+													<source src="audio/sample.mp3" type="audio/mp3"/>
+												</audio>
 												<a class="reviewItem__btn" href="#">Читать отзыв
 												</a>
 											</div>
@@ -708,7 +717,9 @@
 												<h4>&laquo;Все договоренности соблюдаются&raquo;</h4>
 												<div class="reviewItem__subtitle">Аудио-отзыв
 												</div>
-												<audio controls="" src=""></audio>
+												<audio class="js-player" controls="">
+													<source src="audio/sample.mp3" type="audio/mp3"/>
+												</audio>
 												<a class="reviewItem__btn" href="#">Читать отзыв
 												</a>
 											</div>
@@ -737,7 +748,9 @@
 												<h4>&laquo;Аккуратно все сделали и&nbsp;уложились в&nbsp;сроки&raquo;</h4>
 												<div class="reviewItem__subtitle">Аудио-отзыв
 												</div>
-												<audio controls="" src=""></audio>
+												<audio class="js-player" controls="">
+													<source src="audio/sample.mp3" type="audio/mp3"/>
+												</audio>
 												<a class="reviewItem__btn" href="#">Читать отзыв
 												</a>
 											</div>
@@ -1353,6 +1366,7 @@
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
+		<script src="libs/plyr/plyr.min.js"> </script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
